[Glitch] Profile redesign: Fix timeline filter button color on Safari iOS
Port c0b22868719052728883b121ca3322c6b0895c78 to glitch-soc

--- a/app/javascript/flavours/glitch/features/account_timeline/v2/styles.module.scss
+++ b/app/javascript/flavours/glitch/features/account_timeline/v2/styles.module.scss
@@ -5,6 +5,7 @@
 .filterSelectButton {
   appearance: none;
   border: none;
+  color: inherit;
   background: none;
   padding: 8px 0;
   font-size: 15px;
